# ccomp

./: CMakeLists.txt  main.c  test.c
src/: CMakeLists.txt  alloc.c  alloc.h  compile_file.c  compile_file.h  diagnostics.c  diagnostics.h  main.c  parse_args.c  parse_args.h  position.c  position.h  preprocess.c  preprocess.h  read_file.c  read_file.h  str.c  str.h  syntax_tree.c  syntax_tree.h  terminal.c  tokenizer.c  tokenizer.h  vec.c  vec.h
test/: CMakeLists.txt  main.c  test.h  vec.c  walk_fpos.c
