include_directories(${CCOMP_SOURCE_DIR}/src)
link_directories(${CCOMP_SOURCE_DIR}/src)

file(GLOB files "*.h" "*.c")
add_executable(ccomp ${files} ../main.c)

add_definitions("-Werror=incompatible-pointer-types")
add_definitions("-Werror=implicit-function-declaration")
add_definitions("-Wall")
add_definitions("-Wextra")
add_definitions("-Wpedantic")
add_definitions("-Werror")
add_definitions("-Wno-error=unused-parameter")
add_definitions("-ansi")
add_definitions("-Wno-unused-function")
add_definitions("-Wno-unused-variable")
